--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -59,7 +59,7 @@ jobs:
       # CodeDeploy에게 배포 명령을 내립니다.
     - name: Code Deploy
       run: >
-        aws deploy create-deployment --application-name be-47-hanul01
+        aws deploy create-deployment --application-name be-47-Hanul01
         --deployment-config-name CodeDeployDefault.AllAtOnce
-        --deployment-group-name be-47-hanul01-group
+        --deployment-group-name be-47-Hanul01-group
         --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=practice-deploy.zip
